--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -14,27 +14,24 @@ DonatCase:
   Languages: en #ru/en/ua
   #Are messages to the player about adding keys included?
   SetKeysTargetMessage: true
-  Title:
-    Title: '%group'
-    SubTitle: ''
   Cases:
     case:
+      Animation: SHAPE
       Title: '&c&lDonate-&a&lCase'
       Gui:
+        GuiMaterial: WHITE_STAINED_GLASS_PANE
+        GuiOpenCaseMaterial: TRIPWIRE_HOOK
         DisplayName: '&bOpen Case'
         Lore:
           - '&6The case can be bought on the website: &cDonateCase.com'
           - ''
           - '&7Keys: %keys'
           - ''
-          - '&6Drops out:'
-          - '&7[&aCreative&7] - &b&n65%'
-          - '&7[&bAdmin&7] - &b&n60'
-          - '&7[&eHelper&7] - &b&n50'
-          - '&7[&bModerator&7] - &b&n40'
-          - '§6§l§m✖§b§lOwner§6§l§m✖&6 - &b&n25'
-          - '§8§l[§3§lAdministrator§a§l✔§8§l] - &b&n15'
-          - '§8§l[§b§lAdministrator§8§l] §8§l[§c§lPRO§b§l✔§8§l] - &b&n10'
+          - '&6Drops:'
+          - '&7&l[&aVIP&7&l] - &b&n50%'
+          - '&7&l[&bVIP&6+&7&l] - &b&n25%'
+          - '&7&l[&5Deluxe&7&l] - &b&n15%'
+          - '&7&l[&dLegend&7&l] - &b&n10%'
           - ''
       Items:
         VIP:
@@ -44,7 +41,7 @@ DonatCase:
             ID: IRON_SWORD
             DisplayName: '&7&l[&aVIP&7&l]'
           Commands:
-            - lp user %player group set %group
+            - lp user %player parent add %group
           Broadcast:
             - '&a>&c>&e> &c%player &6won a donate %group &6from &5Ultra-Case.'
         VIPPLUS:
@@ -54,7 +51,7 @@ DonatCase:
             ID: GOLDEN_SWORD
             DisplayName: '&7&l[&bVIP&6+&7&l]'
           Commands:
-            - lp user %player group set %group
+            - lp user %player parent add %group
           Broadcast:
             - '&a>&c>&e> &c%player &6won a donate %group &6from &5Ultra-Case.'
         Deluxe:
@@ -64,7 +61,7 @@ DonatCase:
             ID: DIAMOND_SWORD
             DisplayName: '&7&l[&5Deluxe&7&l]'
           Commands:
-            - lp user %player group set %group
+            - lp user %player parent add %group
           Broadcast:
             - '&a>&c>&e> &c%player &6won a donate %group &6from &5Ultra-Case.'
         Legend:
@@ -74,6 +71,6 @@ DonatCase:
             ID: NETHERITE_SWORD
             DisplayName: '&7&l[&dLegend&7&l]'
           Commands:
-            - lp user %player group set %group
+            - lp user %player parent add %group
           Broadcast:
             - '&a>&c>&e> &c%player &6won a donate %group &6from &5Ultra-Case.'
