--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -18,7 +18,7 @@ DonatCase:
     case:
       Animation: SHAPE #SHAPE, FIREWORK
       AnimationSound: ENTITY_EXPERIENCE_ORB_PICKUP # remove this line if you don't want to play sound
-      Title: '&c&lDonate-&a&lCase'
+      Title: '&c&lDonate-&a&lCase' # If you want to make another case, then the Title needs to be changed
       Gui:
         GuiMaterial: WHITE_STAINED_GLASS_PANE
         GuiOpenCaseMaterial: TRIPWIRE_HOOK
