--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,6 +1,13 @@
 Shape: #Soon.....
 
-Rainly: #Soon.....
+Rainly:
+  FallingParticle: FALLING_WATER
+  # FALLING_WATER
+  # FALLING_LAVA
+  # FALLING_DUST
+  # FALLING_HONEY   1.16+
+  # FALLING_NECTAR  1.16+
+  # FALLING_OBSIDIAN_TEAR
 
 Firework:
   Power: 0 # Firework power
