--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,7 +1,8 @@
+config: "1.0"
 Shape: #Soon.....
 
 Rainly:
-  FallingParticle: FALLING_WATER
+  FallingParticle: FALLING_WATER # you can use all particles, full list: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # FALLING_WATER
   # FALLING_LAVA
   # FALLING_DUST
