--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.jodexindustries</groupId>
   <artifactId>DonateCase</artifactId>
-  <version>2.0.9.4</version>
+  <version>2.0.9.7</version>
   <packaging>jar</packaging>
 
   <name>DonateCase</name>
@@ -45,6 +45,11 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+
+        <repository>
+            <id>minecraft-repo</id>
+            <url>https://libraries.minecraft.net/</url>
+        </repository>
         <!-- Vault -->
         <repository>
             <id>jitpack.io</id>
@@ -64,6 +69,13 @@
             <groupId>com.github.MilkBowl</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+            <version>1.5.21</version>
             <scope>provided</scope>
         </dependency>
 
