--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [11, 17, 18, 19]
+        java: [11, 17]
 
     name: Java ${{ matrix.java }}
 
