--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
+    id 'com.rikonardo.papermake' version '1.0.6'
+
 }
 
 group = 'com.jodexindustries'
-version = '2.0.9.9'
+version = '2.0.9.8'
 
 repositories {
     mavenCentral()
