--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,4 +1,4 @@
-config: "1.0"
+config: "1.1"
 Shape: #Soon.....
 
 Rainly:
@@ -17,3 +17,12 @@ Firework:
     - BLUE
     - GREEN
     - YELLOW
+
+Wheel:
+  ItemsCount: 6
+  CircleSpeed: 0.5
+  CircleRadius: 1.5
+  Scroll:
+    Sound: UI_BUTTON_CLICK
+    Volume: 10
+    Pitch: 1
