--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.jodexindustries.donatecase'
-version = '2.1.0.2'
+version = '2.1.0.3'
 
 repositories {
     mavenCentral()
@@ -38,6 +38,7 @@ dependencies {
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
     compileOnly "me.clip:placeholderapi:2.11.2"
     compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
+    compileOnly fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 def targetJavaVersion = 11
