--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -26,3 +26,7 @@ Wheel:
     Sound: UI_BUTTON_CLICK
     Volume: 10
     Pitch: 1
+  Finish:
+    Sound: ENTITY_EXPERIENCE_ORB_PICKUP
+    Volume: 10
+    Pitch: 1
