--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
     compileOnly "me.clip:placeholderapi:2.11.2"
     compileOnly "com.arcaniax:HeadDatabase-API:1.3.1"
-    compileOnly fileTree(include: ['*.jar'], dir: 'libs')
+    compileOnly "de.likewhat.customheads:CustomHeads:3.0.7"
 }
 
 def targetJavaVersion = 11
