--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -25,6 +25,9 @@ DonatCase:
     case:
       Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL
       AnimationSound: ENTITY_EXPERIENCE_ORB_PICKUP # remove this line if you don't want to play sound
+      Sound:
+        Volume: 10
+        Pitch: 5
       Title: '&c&lDonate-&a&lCase' # If you want to make another case, then the Title needs to be changed
       Gui:
         GuiMaterial: WHITE_STAINED_GLASS_PANE # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
