--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -21,7 +21,7 @@ DonatCase:
     vipplus: 2
     vip: 1
     default: 0
-  Cases:
+  Cases: # WARNING! To create another case, you need to be sure to choose a different name for "Title"
     case:
       Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL
       AnimationSound: ENTITY_EXPERIENCE_ORB_PICKUP # remove this line if you don't want to play sound
