--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -1,4 +1,4 @@
-config: '2.4' #DON'T CHANGE THIS PLEASE
+config: '2.5' #DON'T CHANGE THIS PLEASE
 
 DonatCase:
   #Do I need to check for plugin updates?
@@ -33,10 +33,12 @@ DonatCase:
       Gui:
         GuiMaterial: WHITE_STAINED_GLASS_PANE # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
         GuiMaterialName: "&cDonateCase.com"
+        GuiMaterialEnchant: false
         GuiMaterialLore:
           - "&f       &f"
           - "&f       &f"
         GuiOpenCaseMaterial: TRIPWIRE_HOOK # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
+        GuiOpenCaseMaterialEnchant: false
         DisplayName: '&bOpen Case'
         Lore:
           - '&6The case can be bought on the website: &cDonateCase.com'
@@ -56,6 +58,7 @@ DonatCase:
           Item:
             ID: IRON_SWORD # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
             DisplayName: '&7&l[&aVIP&7&l]'
+            Enchanted: false
           GiveCommand: lp user %player parent set %group
           Commands:
             - some commands here
@@ -69,6 +72,7 @@ DonatCase:
           Item:
             ID: GOLDEN_SWORD # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
             DisplayName: '&7&l[&bVIP&6+&7&l]'
+            Enchanted: false
           GiveCommand: lp user %player parent set %group
           Commands:
             - some commands here
@@ -82,6 +86,7 @@ DonatCase:
           Item:
             ID: DIAMOND_SWORD # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
             DisplayName: '&7&l[&5Deluxe&7&l]'
+            Enchanted: false
           GiveCommand: lp user %player parent set %group
           Commands:
             - some commands here
@@ -95,6 +100,7 @@ DonatCase:
           Item:
             ID: NETHERITE_SWORD # you can use player head, example: HEAD:_Jodex__ or HDB:1234 or CH:<category>:<id>
             DisplayName: '&7&l[&dLegend&7&l]'
+            Enchanted: false
           GiveCommand: lp user %player parent set %group
           Commands:
             - some commands here
