--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -31,13 +31,13 @@ DonatCase:
         Pitch: 5
       Title: '&c&lDonate-&a&lCase' # If you want to make another case, then the Title needs to be changed
       Gui:
-        GuiMaterial: WHITE_STAINED_GLASS_PANE # you can use player head, see: https://wiki.jodexindustries.space/settings/customheads
+        GuiMaterial: WHITE_STAINED_GLASS_PANE # see: https://wiki.jodexindustries.space/settings/item-id
         GuiMaterialName: "&cDonateCase.com"
         GuiMaterialEnchant: false
         GuiMaterialLore:
           - "&f       &f"
           - "&f       &f"
-        GuiOpenCaseMaterial: TRIPWIRE_HOOK # you can use player head, see: https://wiki.jodexindustries.space/settings/customheads
+        GuiOpenCaseMaterial: TRIPWIRE_HOOK # see: https://wiki.jodexindustries.space/settings/item-id
         GuiOpenCaseMaterialEnchant: false
         DisplayName: '&bOpen Case'
         Lore:
@@ -56,7 +56,7 @@ DonatCase:
           Group: vip
           Chance: 50
           Item:
-            ID: IRON_SWORD # you can use player head, see: https://wiki.jodexindustries.space/settings/customheads
+            ID: IRON_SWORD # see: https://wiki.jodexindustries.space/settings/item-id
             DisplayName: '&7&l[&aVIP&7&l]'
             Enchanted: false
           GiveCommand: lp user %player parent set %group
@@ -70,7 +70,7 @@ DonatCase:
           Group: vipplus
           Chance: 25
           Item:
-            ID: GOLDEN_SWORD # you can use player head, see: https://wiki.jodexindustries.space/settings/customheads
+            ID: GOLDEN_SWORD # see: https://wiki.jodexindustries.space/settings/item-id
             DisplayName: '&7&l[&bVIP&6+&7&l]'
             Enchanted: false
           GiveCommand: lp user %player parent set %group
@@ -84,7 +84,7 @@ DonatCase:
           Group: deluxe
           Chance: 15
           Item:
-            ID: DIAMOND_SWORD # you can use player head, see: https://wiki.jodexindustries.space/settings/customheads
+            ID: DIAMOND_SWORD # see: https://wiki.jodexindustries.space/settings/item-id
             DisplayName: '&7&l[&5Deluxe&7&l]'
             Enchanted: false
           GiveCommand: lp user %player parent set %group
@@ -98,7 +98,7 @@ DonatCase:
           Group: legend
           Chance: 10
           Item:
-            ID: NETHERITE_SWORD # you can use player head, see: https://wiki.jodexindustries.space/settings/customheads
+            ID: NETHERITE_SWORD # see: https://wiki.jodexindustries.space/settings/item-id
             DisplayName: '&7&l[&dLegend&7&l]'
             Enchanted: false
           GiveCommand: lp user %player parent set %group
