--- a/src/main/resources/Config.yml
+++ b/src/main/resources/Config.yml
@@ -25,7 +25,7 @@ DonatCase:
   NoKeyWarningSound: ENTITY_ENDERMAN_TELEPORT
   Cases:
     case:
-      Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL, FULLWHEEL
+      Animation: SHAPE #SHAPE, FIREWORK, RAINLY, WHEEL, FULLWHEEL see: https://wiki.jodexindustries.space/docs/DonateCase/animations
       AnimationSound: ENTITY_EXPERIENCE_ORB_PICKUP # remove this line if you don't want to play sound
       Sound:
         Volume: 10
