--- a/src/main/resources/Animations.yml
+++ b/src/main/resources/Animations.yml
@@ -1,4 +1,4 @@
-config: "1.2"
+config: "1.3"
 Shape: #Soon.....
 
 Rainly:
@@ -22,6 +22,7 @@ Wheel:
   ItemsCount: 6
   CircleSpeed: 0.5
   CircleRadius: 1.5
+  LiftingAlongY: 0
   Scroll:
     Sound: UI_BUTTON_CLICK
     Volume: 10
@@ -30,6 +31,7 @@ Wheel:
 FullWheel:
   CircleSpeed: 0.5
   CircleRadius: 1.5
+  LiftingAlongY: 0
   Scroll:
     Sound: UI_BUTTON_CLICK
     Volume: 10
